# rustricks

./: Cargo.toml  README.md
examples/lifetime/: lifetime.md  main.rs
examples/result/: main.rs  result.md  textfile.txt
